--- a/Week_3.ipynb
+++ b/Week_3.ipynb
@@ -6,7 +6,7 @@
       "name": "Week 3",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJRq+5jUclp0s/C5be7x91",
+      "authorship_tag": "ABX9TyP3CbRW6f/GGrHSDAJ8gfTv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "mvvZ9fXmoOHE",
         "colab_type": "code",
-        "outputId": "53b98c28-42aa-4aef-f627-f0428a6e7df9",
+        "outputId": "540de10d-5fac-4019-98e4-e4ca614b1841",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -82,15 +82,15 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 69,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-03cf815b-8c8a-4b62-98e6-3b6629a21ebf\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-03cf815b-8c8a-4b62-98e6-3b6629a21ebf\">\n",
+              "     <input type=\"file\" id=\"files-1817f6a0-4295-445f-9ccc-851ca70701d4\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-1817f6a0-4295-445f-9ccc-851ca70701d4\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -107,7 +107,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving adult.data to adult (1).data\n"
+            "Saving adult.data to adult.data\n"
           ],
           "name": "stdout"
         }
@@ -118,17 +118,17 @@
       "metadata": {
         "id": "qnfh_f4bomj8",
         "colab_type": "code",
-        "outputId": "71fd51fd-e80d-4e7b-e722-ffbe9fa899be",
+        "outputId": "51782a76-59a8-45cc-ac2d-76e2dab5ac7d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 197
         }
       },
       "source": [
         "adult =  pd.read_csv(\"adult.data\", header = None, na_values= [\"?\"], skipinitialspace= True)\n",
         "adult.head()"
       ],
-      "execution_count": 112,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,7 +278,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 112
+          "execution_count": 3
         }
       ]
     },
@@ -287,17 +287,17 @@
       "metadata": {
         "id": "X9Y4iH2Qpftp",
         "colab_type": "code",
-        "outputId": "6c26c446-137c-49b3-f73a-b0a9e594274c",
+        "outputId": "e9e03cb8-bac9-42f3-8ffd-9f957c876854",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 197
         }
       },
       "source": [
         "adult.columns = [\"age\",\"workclass\",\"fnlwgt\",\"education\",\"education-num\",\"marital-status\",\"occupation\",\"relationship\",\"race\",\"sex\",\"capital\",\"capital-loss\",\"hours-per-week\",\"native-country\",\"<=50K\"]\n",
         "adult.head()"
       ],
-      "execution_count": 113,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +447,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 113
+          "execution_count": 4
         }
       ]
     },
@@ -456,16 +456,16 @@
       "metadata": {
         "id": "9i9-aMT0qoSN",
         "colab_type": "code",
-        "outputId": "8e7e39a6-06c2-4a73-e0fd-f3c1d9196927",
+        "outputId": "0a3605dd-1455-457a-86a2-769155c1f772",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 289
+          "height": 301
         }
       },
       "source": [
         "adult.dtypes"
       ],
-      "execution_count": 114,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -492,7 +492,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 114
+          "execution_count": 5
         }
       ]
     },
@@ -511,10 +511,10 @@
       "metadata": {
         "id": "R96SAeXJrtY2",
         "colab_type": "code",
-        "outputId": "de11db56-de6a-4cfb-bf17-036ef0b912d8",
+        "outputId": "196ad64a-79a9-4b0a-e9ec-251546293f7d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 289
+          "height": 301
         }
       },
       "source": [
@@ -524,7 +524,7 @@
         "\n",
         "adult.isna().sum(axis = 0)"
       ],
-      "execution_count": 115,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +551,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 115
+          "execution_count": 6
         }
       ]
     },
@@ -570,11 +570,11 @@
       "metadata": {
         "id": "Wo9YD31eLksv",
         "colab_type": "code",
+        "outputId": "487b2a62-5e18-4e91-b934-7d2deea05e08",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 289
-        },
-        "outputId": "c9d7da28-95e2-408f-9564-90d12f725887"
+          "height": 301
+        }
       },
       "source": [
         "# adult[\"sex\"] = adult[\"sex\"].replace(0, \"Male\", inplace = True)\n",
@@ -593,7 +593,7 @@
         "\n",
         "adult.dtypes"
       ],
-      "execution_count": 116,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +620,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 116
+          "execution_count": 7
         }
       ]
     },
@@ -654,10 +654,10 @@
       "metadata": {
         "id": "41BQr98xvT_0",
         "colab_type": "code",
-        "outputId": "6b102b83-4cae-4b62-b8a2-257487bc0b4e",
+        "outputId": "73a53d78-e423-4981-bfcb-abc42b722ae0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 442
+          "height": 461
         }
       },
       "source": [
@@ -665,7 +665,7 @@
         "y = adult.iloc[:,14] # Target\n",
         "X,y"
       ],
-      "execution_count": 170,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -701,7 +701,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 170
+          "execution_count": 9
         }
       ]
     },
@@ -710,7 +710,7 @@
       "metadata": {
         "id": "FBM0wCEn4YJa",
         "colab_type": "code",
-        "outputId": "6de21954-07bf-4961-f365-a41d0c74d244",
+        "outputId": "3fe27c6f-c4e3-48ba-e7d1-b6399d10b190",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -736,7 +736,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 171,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +748,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 171
+          "execution_count": 10
         }
       ]
     },
@@ -757,7 +757,7 @@
       "metadata": {
         "id": "2cpRsbI97gr5",
         "colab_type": "code",
-        "outputId": "ec7ea322-437e-40b9-a79f-5f37bc9d47ff",
+        "outputId": "c9292e8c-0caa-4c7a-9b3c-12c99e78f984",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -775,7 +775,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 121,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +787,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 121
+          "execution_count": 11
         }
       ]
     },
@@ -796,7 +796,7 @@
       "metadata": {
         "id": "fmXW7kqx7qdA",
         "colab_type": "code",
-        "outputId": "19b31b58-4f05-4447-fae7-a2fa6d061efb",
+        "outputId": "789d8483-578c-452a-c9e4-d1c61100234b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -806,7 +806,7 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "\n",
         "# train the classifier (knn modeling)\n",
-        "classifier = KNeighborsClassifier(n_neighbors= int(np.floor(np.sqrt(y_test.size))), weights='uniform', algorithm='auto', leaf_size=30, p=2)\n",
+        "classifier = KNeighborsClassifier(n_neighbors= int(np.floor(np.sqrt(X.size))), weights='uniform', algorithm='auto', leaf_size=30, p=2)\n",
         "classifier.fit(X_train, y_train)\n",
         "\n",
         "predicted_y = classifier.predict(X_test)\n",
@@ -814,19 +814,19 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 122,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7721295170737098"
+              "0.7474859100453088"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 122
+          "execution_count": 12
         }
       ]
     },
@@ -835,11 +835,11 @@
       "metadata": {
         "id": "1R2w_11gy4gc",
         "colab_type": "code",
+        "outputId": "205ed334-b904-498b-b58e-1ee1a1ce2ef0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 425
-        },
-        "outputId": "a580673e-9a51-4e86-887f-2affd9acbe8c"
+          "height": 443
+        }
       },
       "source": [
         "# X_train, X_test, y_train, y_test = train_test_split(X,y, test_size = 0.3, random_state = 0)\n",
@@ -854,7 +854,7 @@
         "\n",
         "X_test[numeric_col] = std_scale.transform(X_test[numeric_col])"
       ],
-      "execution_count": 178,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -893,7 +893,7 @@
       "metadata": {
         "id": "zjllCcd471KI",
         "colab_type": "code",
-        "outputId": "d2d94812-8599-4773-bd7e-11957ad0e903",
+        "outputId": "799ff3f4-0b3f-4161-d100-b5027065ffd9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -912,19 +912,97 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 179,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7800861973698752"
+              "0.5009393303127417"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 179
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A6YSDOtdXLzV",
+        "colab_type": "code",
+        "outputId": "19c86169-7c0b-4d5b-f1c8-32fe4f8280c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "# train the classifier (random forest modeling)\n",
+        "classifier = RandomForestClassifier(max_depth=4, random_state=0)\n",
+        "classifier.fit(X_train, y_train)\n",
+        "\n",
+        "predicted_y = classifier.predict(X_test)\n",
+        "accuracy = accuracy_score(y_test, predicted_y)\n",
+        "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
+        "accuracy"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8139020886285777"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rWARwoqSXPo0",
+        "colab_type": "code",
+        "outputId": "6590cdf7-fb74-4059-a85e-8418e2153a0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "# train the classifier (knn modeling)\n",
+        "classifier = KNeighborsClassifier(n_neighbors= int(np.floor(np.sqrt(X.size))), weights='uniform', algorithm='auto', leaf_size=30, p=2)\n",
+        "classifier.fit(X_train, y_train)\n",
+        "\n",
+        "predicted_y = classifier.predict(X_test)\n",
+        "accuracy = accuracy_score(y_test, predicted_y)\n",
+        "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
+        "accuracy"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8213062216819538"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
         }
       ]
     }
