--- a/03_Prove_Assignment_2.ipynb
+++ b/03_Prove_Assignment_2.ipynb
@@ -6,7 +6,7 @@
       "name": "03 Prove : Assignment 2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMWbkr9Igld7IG5hrMYPDEL",
+      "authorship_tag": "ABX9TyP6E9eb37y+zWB4Qxp5wx/L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "metadata": {
         "id": "k9FNKmlmkIX7",
         "colab_type": "code",
-        "outputId": "de890f8e-26f7-4013-b2b5-a9c2fefd5970",
+        "outputId": "588ecb46-950f-4dd9-b378-4b00eb612b24",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -56,15 +56,15 @@
         "from google.colab import files\n",
         "file = files.upload()"
       ],
-      "execution_count": 15,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-b34c1dc4-6528-4297-8b96-8fe17f573494\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-b34c1dc4-6528-4297-8b96-8fe17f573494\">\n",
+              "     <input type=\"file\" id=\"files-ad768779-83d3-4c84-afba-a45ab3eb819c\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-ad768779-83d3-4c84-afba-a45ab3eb819c\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -81,7 +81,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving auto-mpg.data to auto-mpg (1).data\n"
+            "Saving auto-mpg.data to auto-mpg (2).data\n"
           ],
           "name": "stdout"
         }
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "C5zdOgBqkTgP",
         "colab_type": "code",
-        "outputId": "5c300928-c223-4e74-dd95-59f91e342679",
+        "outputId": "6558cffc-834b-4b7a-a2b6-a981f6182f0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -103,7 +103,7 @@
         "auto_mpg.columns = [\"mpg\",\"cyclinder\",\"displacement\",\"horsepower\",\"weight\",\"accelaration\",\"model year\",\"origin\",\"car name\"]\n",
         "auto_mpg.head()"
       ],
-      "execution_count": 33,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +217,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 62
         }
       ]
     },
@@ -226,7 +226,7 @@
       "metadata": {
         "id": "OeaRtaqLk0BO",
         "colab_type": "code",
-        "outputId": "34859108-cd5c-4cf6-93af-74adec4822e5",
+        "outputId": "31d535fd-2d0b-4dad-9c2f-22c3be4e1256",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
@@ -235,7 +235,7 @@
       "source": [
         "auto_mpg.describe"
       ],
-      "execution_count": 17,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,7 +260,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 63
         }
       ]
     },
@@ -269,7 +269,7 @@
       "metadata": {
         "id": "1ecD_1WCnhB9",
         "colab_type": "code",
-        "outputId": "aa756376-f053-480d-ff89-fc328b3b6203",
+        "outputId": "b0b54642-8192-417c-e01f-186a9c5ad52e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 194
@@ -278,7 +278,7 @@
       "source": [
         "auto_mpg.dtypes"
       ],
-      "execution_count": 18,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -299,7 +299,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 64
         }
       ]
     },
@@ -308,7 +308,7 @@
       "metadata": {
         "id": "cKdYz5jIcqQI",
         "colab_type": "code",
-        "outputId": "99a5d600-211b-433f-8611-beef9bb63abb",
+        "outputId": "3a565490-3fb1-4dcf-afb0-ddd07e996f3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 230
@@ -317,7 +317,7 @@
       "source": [
         "auto_mpg[\"horsepower\"].value_counts()"
       ],
-      "execution_count": 19,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 65
         }
       ]
     },
@@ -349,7 +349,7 @@
       "metadata": {
         "id": "JSu1ZsXonm96",
         "colab_type": "code",
-        "outputId": "e9b8975c-f9f1-4613-9921-23d21e4558c4",
+        "outputId": "e9c8f56c-3184-4b21-bcb6-7b6a424f0e6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -361,7 +361,7 @@
         "\n",
         "auto_mpg.head()"
       ],
-      "execution_count": 34,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 66
         }
       ]
     },
@@ -496,7 +496,7 @@
       "metadata": {
         "id": "SX1AozXFeDpj",
         "colab_type": "code",
-        "outputId": "905a4afb-f816-4b2e-eaf3-6bd43529edf1",
+        "outputId": "fef2d056-f0d3-45e6-aeb9-62fca5cf6a72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 123
@@ -505,7 +505,7 @@
       "source": [
         "auto_mpg[\"cyclinder\"].value_counts()"
       ],
-      "execution_count": 21,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +522,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 67
         }
       ]
     },
@@ -531,7 +531,7 @@
       "metadata": {
         "id": "l9EKUmLbeLeI",
         "colab_type": "code",
-        "outputId": "281f787e-87b3-420d-9bcb-ed24e41b5070",
+        "outputId": "2b8c5565-ae22-45f2-ffcf-9dc008cc6553",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
@@ -540,7 +540,7 @@
       "source": [
         "auto_mpg[\"model year\"].value_counts()"
       ],
-      "execution_count": 22,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +565,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 68
         }
       ]
     },
@@ -574,7 +574,7 @@
       "metadata": {
         "id": "sM-uYjBeeP5O",
         "colab_type": "code",
-        "outputId": "a132d622-0f6c-4200-b309-8798bc2a2662",
+        "outputId": "ffd1af0e-cf23-4599-e2b8-5a2f0815f2cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -583,7 +583,7 @@
       "source": [
         "auto_mpg[\"origin\"].value_counts()"
       ],
-      "execution_count": 23,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +598,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 69
         }
       ]
     },
@@ -607,7 +607,7 @@
       "metadata": {
         "id": "P6z-iTevbYvy",
         "colab_type": "code",
-        "outputId": "521ff79c-65cf-4387-c0f1-122885c2918f",
+        "outputId": "f1cc820d-cb27-4d84-997b-86f0a3fd8ea3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 692
@@ -616,7 +616,7 @@
       "source": [
         "auto_mpg[\"brand\"].value_counts()"
       ],
-      "execution_count": 24,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -665,7 +665,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 70
         }
       ]
     },
@@ -674,7 +674,7 @@
       "metadata": {
         "id": "S1gyKkpIlaCZ",
         "colab_type": "code",
-        "outputId": "d8cb8bff-89fd-46d5-b147-910029880a45",
+        "outputId": "f78d26c2-7c6e-4071-eb26-264603528ca8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 230
@@ -683,7 +683,7 @@
       "source": [
         "auto_mpg[\"model\"].value_counts()"
       ],
-      "execution_count": 25,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -706,7 +706,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 71
         }
       ]
     },
@@ -715,7 +715,7 @@
       "metadata": {
         "id": "JtOB1RhjcTtA",
         "colab_type": "code",
-        "outputId": "d7c06149-a4bf-45bc-c561-a7121fd9e9ea",
+        "outputId": "fcff3933-af1c-4c29-f83a-741b2a8cf988",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 230
@@ -724,7 +724,7 @@
       "source": [
         "auto_mpg.isna().sum(axis = 0)"
       ],
-      "execution_count": 35,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +747,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 72
         }
       ]
     },
@@ -756,7 +756,7 @@
       "metadata": {
         "id": "NlIcjS9beVLH",
         "colab_type": "code",
-        "outputId": "0910e5c4-1bcb-45ce-f448-814919bbd9de",
+        "outputId": "f8c06b6e-01b6-40c5-bed4-b65c0671d965",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 230
@@ -773,7 +773,7 @@
         "\n",
         "auto_mpg.isna().sum(axis = 0)"
       ],
-      "execution_count": 36,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -796,7 +796,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 73
         }
       ]
     },
@@ -818,7 +818,7 @@
       "metadata": {
         "id": "5ADqO6RNbKRF",
         "colab_type": "code",
-        "outputId": "fde77bee-f316-4fdb-a465-14eec98f91c9",
+        "outputId": "4fa6505f-4cfa-4034-b9da-05e57d20b50a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 461
@@ -830,7 +830,7 @@
         "\n",
         "X,y"
       ],
-      "execution_count": 47,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -866,7 +866,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 75
         }
       ]
     },
@@ -888,18 +888,68 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "-Y3eEHg13vdY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 443
+        },
+        "outputId": "e9968e4a-cc39-4d30-eccc-ee14a37d8798"
+      },
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "std_scale = StandardScaler()\n",
+        "X_train[[\"displacement\", \"horsepower\", \"weight\", \"accelaration\"]] = std_scale.fit_transform(X_train[[\"displacement\", \"horsepower\", \"weight\", \"accelaration\"]])\n",
+        "X_test[[\"displacement\", \"horsepower\", \"weight\", \"accelaration\"]] = std_scale.transform(X_test[[\"displacement\", \"horsepower\", \"weight\", \"accelaration\"]])\n"
+      ],
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  after removing the cwd from sys.path.\n",
+            "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:966: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  self.obj[item] = s\n",
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \"\"\"\n",
+            "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:966: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  self.obj[item] = s\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "JKDvkZ6BjYCT",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d823791c-3fa3-47db-c84b-748758f87a16"
+        "outputId": "8c581ba5-ac06-473a-b322-82794d251b44"
       },
       "source": [
         "from sklearn.neighbors import KNeighborsRegressor\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "\n",
         "\n",
         "\n",
         "knn_reg = KNeighborsRegressor(n_neighbors= int(np.floor(np.sqrt(len(y_test)))))\n",
@@ -909,19 +959,19 @@
         "\n",
         "np.sqrt(sum((y_test - prediction) ** 2))"
       ],
-      "execution_count": 60,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "45.24395097689857"
+              "156.08622617002436"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 60
+          "execution_count": 85
         }
       ]
     }
