--- a/04_Prove_Assignment_Part1.ipynb
+++ b/04_Prove_Assignment_Part1.ipynb
@@ -6,7 +6,7 @@
       "name": "04 Prove : Assignment-Part1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPCn8RG+y0EWOymvNVYsvb+",
+      "authorship_tag": "ABX9TyMxl0p4SNYNNPD6zT1E3+19",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "metadata": {
         "id": "PB5tfcPUuNS6",
         "colab_type": "code",
-        "outputId": "db034abd-f719-4491-fd37-e270a780b38f",
+        "outputId": "dcff8508-9d34-49d5-e4ea-f6d1d58e522e",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -57,15 +57,15 @@
         "\n",
         "file = files.upload()"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-e907248b-e97e-4c0d-a5c9-21a89859ca37\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-e907248b-e97e-4c0d-a5c9-21a89859ca37\">\n",
+              "     <input type=\"file\" id=\"files-ee7d43c5-ff69-4007-9dd5-0fb6b64b22ee\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-ee7d43c5-ff69-4007-9dd5-0fb6b64b22ee\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "seWY3Wy_udvq",
         "colab_type": "code",
-        "outputId": "61020baa-aa59-478d-e288-ef0d0ea2956c",
+        "outputId": "1b78a94b-9852-402d-a327-edb07b56fcaa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 406
@@ -105,7 +105,7 @@
         "credit.columns = [\"A\" + str(i) for i in range(1,17)]\n",
         "credit"
       ],
-      "execution_count": 149,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,7 +382,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 149
+          "execution_count": 2
         }
       ]
     },
@@ -391,7 +391,7 @@
       "metadata": {
         "id": "leyyLSx7wHXM",
         "colab_type": "code",
-        "outputId": "afacce7c-84dd-4698-c33b-3d514db0664b",
+        "outputId": "471d8eec-34a5-4f69-86a4-3d067cdbb98f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 318
@@ -400,7 +400,7 @@
       "source": [
         "credit.dtypes"
       ],
-      "execution_count": 150,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +428,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 150
+          "execution_count": 3
         }
       ]
     },
@@ -437,7 +437,7 @@
       "metadata": {
         "id": "73uXWgG2umt-",
         "colab_type": "code",
-        "outputId": "9407e6bf-277d-473d-ecdd-a8d58ac594e1",
+        "outputId": "30bb692b-63dd-48a3-b6d8-2ee3bb69b461",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 318
@@ -446,7 +446,7 @@
       "source": [
         "credit.isna().sum(axis = 0)"
       ],
-      "execution_count": 151,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +474,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 151
+          "execution_count": 4
         }
       ]
     },
@@ -483,7 +483,7 @@
       "metadata": {
         "id": "uCRwzWkvwqJr",
         "colab_type": "code",
-        "outputId": "dbf2bb6d-2e82-4e14-857e-238289c9579c",
+        "outputId": "980f6135-ba75-4fb8-d77c-0b34b4ef567c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 318
@@ -500,7 +500,7 @@
         "\n",
         "credit.isna().sum(axis = 0)"
       ],
-      "execution_count": 152,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,7 +528,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 152
+          "execution_count": 5
         }
       ]
     },
@@ -545,6 +545,7 @@
         "X = credit.drop(columns = \"A16\", axis = 1)\n",
         "y = credit[\"A16\"].map({\"+\":0, \"-\":1})\n",
         "\n",
+        "# One-Hot-Encoding\n",
         "X = pd.get_dummies(X, columns = X.select_dtypes(\"object\").columns)\n",
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size = 0.3, random_state = 0)"
@@ -557,7 +558,7 @@
       "metadata": {
         "id": "bEvJh9T0Yant",
         "colab_type": "code",
-        "outputId": "8205e7d6-96ac-40fd-e4d0-dc9521dbcee4",
+        "outputId": "9c079c55-5dc6-402c-a560-bdfdb233ba52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -569,10 +570,40 @@
         "\n",
         "tree = DecisionTreeClassifier(criterion = \"entropy\", random_state = 0)\n",
         "score = cross_val_score(tree, X = X, y = y, cv = 5)\n",
-        "\n",
+        "get\n",
+        "score"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.68115942, 0.83333333, 0.86956522, 0.76811594, 0.86231884])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TLNXXOdVrScr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d36a9def-7cb0-4052-ad97-fd19038dcfd2"
+      },
+      "source": [
         "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (score.mean(), score.std() * 2))"
       ],
-      "execution_count": 159,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,23 +617,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g7KyI2coE7Ft",
+        "id": "o0uBSnYitRd0",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a7c5f649-4c75-43dc-817f-e928155507d9"
+        "outputId": "adcb6747-b583-4d4c-c4fd-ffd08b045aa0"
       },
       "source": [
+        "from sklearn.model_selection import cross_val_predict\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
+        "predicted_y_cv = cross_val_predict(tree, X, y, cv=5)\n",
+        "\n",
+        "accuracy_score(y, predicted_y_cv)"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8028985507246377"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g7KyI2coE7Ft",
+        "colab_type": "code",
+        "outputId": "3c96d893-4597-4bbf-ff61-07c703fad297",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
         "tree.fit(X_train, y_train)\n",
         "predicted_y = tree.predict(X_test)\n",
         "\n",
         "accuracy_score(y_test, predicted_y)\n"
       ],
-      "execution_count": 160,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -614,7 +678,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 160
+          "execution_count": 34
         }
       ]
     }
